[package]
name = "rqsm"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = "0.8.2"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.64"
regex = "1"

rand = "0.8.5"
chrono = { version = "0.4.41", default-features = false, features = ["wasmbind"] }

base64 = "0.21"


# Force `getrandom` to compile for WASM
getrandom = { version = "0.2", features = ["js"] }

# Image processing crate (already present but confirmed correct)
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "ico", "bmp"] }

# Enable web-sys with required features
web-sys = { version = "0.3.77", features = [
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Element",
    "Window",
    "Document",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "FileReader",
    "File",
    "FileList",
    "ProgressEvent",
    "console",
    "Storage"
] }

# Add this for saving debug images from memory to download via browser
gloo-file = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
